--- a/UOWConsult/Base.lproj/Main.storyboard
+++ b/UOWConsult/Base.lproj/Main.storyboard
@@ -239,13 +239,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M6Q-fa-c75" customClass="JTHorizontalCalendarView">
-                                <rect key="frame" x="0.0" y="108" width="600" height="85"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="85" id="81p-CD-0As"/>
-                                </constraints>
-                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oZ0-84-3tf" customClass="JTCalendarMenuView">
                                 <rect key="frame" x="0.0" y="64" width="600" height="44"/>
                                 <subviews>
@@ -281,15 +274,86 @@
                                     <constraint firstItem="I1A-5O-rqo" firstAttribute="top" secondItem="oZ0-84-3tf" secondAttribute="top" id="ax3-eF-MBR"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M6Q-fa-c75" customClass="JTHorizontalCalendarView">
+                                <rect key="frame" x="0.0" y="108" width="600" height="85"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="85" id="81p-CD-0As"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="C7I-eb-Ev2">
+                                <rect key="frame" x="0.0" y="193" width="600" height="358"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="timetableCell" rowHeight="80" id="FcO-rd-9GJ" customClass="ConsultationTimetableTableViewCell" customModule="UOWConsult" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FcO-rd-9GJ" id="czE-mw-MUE">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="79.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subject Code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FhZ-6H-H6r">
+                                                    <rect key="frame" x="8" y="8" width="139" height="27"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subject Type (Consult, Lecture, Lab)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FmM-bc-KjS">
+                                                    <rect key="frame" x="8" y="43" width="295" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start_time - End Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o5f-F6-KXF">
+                                                    <rect key="frame" x="416" y="29.5" width="176" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7gp-PB-G6k">
+                                                    <rect key="frame" x="155" y="11" width="66" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="o5f-F6-KXF" firstAttribute="trailing" secondItem="czE-mw-MUE" secondAttribute="trailingMargin" id="2LF-b6-WeO"/>
+                                                <constraint firstItem="7gp-PB-G6k" firstAttribute="leading" secondItem="FhZ-6H-H6r" secondAttribute="trailing" constant="8" id="DxO-pP-07y"/>
+                                                <constraint firstItem="FhZ-6H-H6r" firstAttribute="top" secondItem="czE-mw-MUE" secondAttribute="topMargin" id="Els-kO-J0s"/>
+                                                <constraint firstItem="FhZ-6H-H6r" firstAttribute="leading" secondItem="czE-mw-MUE" secondAttribute="leadingMargin" id="XfC-ix-7KV"/>
+                                                <constraint firstItem="FmM-bc-KjS" firstAttribute="leading" secondItem="czE-mw-MUE" secondAttribute="leadingMargin" id="YdF-Hy-5wn"/>
+                                                <constraint firstItem="o5f-F6-KXF" firstAttribute="centerY" secondItem="czE-mw-MUE" secondAttribute="centerY" id="d9N-vg-YRl"/>
+                                                <constraint firstItem="FmM-bc-KjS" firstAttribute="top" secondItem="FhZ-6H-H6r" secondAttribute="bottom" constant="8" id="erG-Sk-WEp"/>
+                                                <constraint firstItem="7gp-PB-G6k" firstAttribute="centerY" secondItem="FhZ-6H-H6r" secondAttribute="centerY" id="qDv-fm-YlY"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="labelSubjectCode" destination="FhZ-6H-H6r" id="ri0-dE-Xbx"/>
+                                            <outlet property="labelSubjectLocation" destination="7gp-PB-G6k" id="VID-zs-0vr"/>
+                                            <outlet property="labelSubjectTime" destination="o5f-F6-KXF" id="LDe-VM-ere"/>
+                                            <outlet property="labelSubjectType" destination="FmM-bc-KjS" id="o2r-to-q3Q"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="UIe-Yg-lHD"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="I6B-Jb-cfY"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="C7I-eb-Ev2" firstAttribute="top" secondItem="M6Q-fa-c75" secondAttribute="bottom" id="0WJ-Ze-JPY"/>
                             <constraint firstAttribute="trailingMargin" secondItem="oZ0-84-3tf" secondAttribute="trailing" constant="-20" id="82Q-vC-m86"/>
                             <constraint firstItem="M6Q-fa-c75" firstAttribute="top" secondItem="oZ0-84-3tf" secondAttribute="bottom" id="D25-hJ-Wr7"/>
                             <constraint firstItem="oZ0-84-3tf" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="GB7-aK-Ngj"/>
                             <constraint firstItem="M6Q-fa-c75" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="O3v-HZ-gHu"/>
                             <constraint firstAttribute="trailingMargin" secondItem="M6Q-fa-c75" secondAttribute="trailing" constant="-20" id="P83-KN-wNo"/>
+                            <constraint firstItem="C7I-eb-Ev2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="cuA-Ok-IGK"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="C7I-eb-Ev2" secondAttribute="bottom" id="mc2-fk-Wgh"/>
                             <constraint firstItem="oZ0-84-3tf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="qh7-Yk-nwu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="C7I-eb-Ev2" secondAttribute="trailing" constant="-20" id="r3h-3w-Zny"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Consultation Time" id="4WL-iw-wVY">
