--- a/UOWConsult/Base.lproj/Main.storyboard
+++ b/UOWConsult/Base.lproj/Main.storyboard
@@ -553,7 +553,7 @@
                             <tableViewSection headerTitle="Profile" id="N5n-N2-VqQ">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="88" id="q7Y-ul-Mde">
-                                        <rect key="frame" x="0.0" y="113.5" width="600" height="88"/>
+                                        <rect key="frame" x="0.0" y="143.5" width="600" height="88"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="q7Y-ul-Mde" id="fHB-Li-yFG">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="87.5"/>
@@ -610,7 +610,7 @@
                             <tableViewSection headerTitle="Menu" id="c39-EV-iOS">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="3SG-7U-FNw">
-                                        <rect key="frame" x="0.0" y="251.5" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="281.5" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3SG-7U-FNw" id="nUs-S9-ZDG">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
@@ -639,10 +639,10 @@
                         </connections>
                     </tableView>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Settings" id="UBG-DD-t4y">
-                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="cIv-4k-dmW">
+                    <navigationItem key="navigationItem" title="Edit details" prompt=" " id="UBG-DD-t4y">
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="nfl-5V-16Z">
                             <connections>
-                                <action selector="cancelPressed:" destination="kq2-rE-AGf" id="GGn-RU-tmz"/>
+                                <action selector="SavePressed:" destination="kq2-rE-AGf" id="ukS-dC-IpN"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -654,7 +654,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Ez-3q-NWQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2510" y="1246"/>
+            <point key="canvasLocation" x="2407" y="1230"/>
         </scene>
     </scenes>
 </document>
